Fixed two small layout bugs for webkit and opera

--- a/static/global/style.css
+++ b/static/global/style.css
@@ -529,7 +529,6 @@ text-decoration: none;
 	background-color: #FFFFFF;
     float: left;
     margin-right: 20px;
-    min-height: 100%;
 	width: 941px;
 	
 	-moz-box-shadow: 2px 2px 2px #000000;
